Changed the title

--- a/writeup/Writeup.tex
+++ b/writeup/Writeup.tex
@@ -11,8 +11,8 @@
 
 \author{Edward A. Lee\\
 \\
-EECS 290N Report\\
-September 13, 2004 \\
+6.337 Project Proposal\\
+April, 19th 2017\\
 \\
 University of California at Berkeley\\
 Berkeley, CA, 94720, USA\\
