performance plots and data / results for Toy problem

--- a/writeup/Writeup.tex
+++ b/writeup/Writeup.tex
@@ -173,7 +173,27 @@ Calculate the elapsed time (relative measure)
 
 
 \subsection{Gradient Descent Performance Characteristics}
+
+
+
+
 \subsubsection{Gradient Descent Performance Characteristics Toy Problem}
+
+
+\begin{figure}
+\includegraphics[width=3.2in]{./ToyLossBFGS.png}
+\caption{Reshaping input character matrix}
+\end{figure}
+
+
+\begin{figure}
+\includegraphics[width=3.2in]{./ToyLoss.png}
+\caption{Reshaping input character matrix}
+\end{figure}
+
+
+
+
 \subsubsection{Gradient Descent Performance Characteristics MNIST}
 
 \subsection{Adam Optimizer Performance Characteristics}
