--- a/writeup/refs.bib
+++ b/writeup/refs.bib
@@ -1,9 +1,28 @@
-@techreport{PtolemyVol1:04,
-   Author = {Brooks, C. and Lee, E. A. and Liu, X. and Neuendorffer, S. and Zhao, Y. and Zheng, H.},
-   Title = {Heterogeneous Concurrent Modeling and Design in Java},
-   Institution = {University of California},
-   Number = {Technical Memorandum UCB/ERL M04/27},
-   Month= {July 29},
-   URL ={http://ptolemy.eecs.berkeley.edu/publications/papers/04/ptIIDesignIntro/},
-   Year = {2004}
+@article{petrova1997origin,
+  title={The origin of the method of steepest descent},
+  author={Petrova, Svetlana S and Solov'ev, Alexander D},
+  journal={Historia Mathematica},
+  volume={24},
+  number={4},
+  pages={361--375},
+  year={1997},
+  publisher={Elsevier}
+}
+@article{munoz2014machine,
+  title={Machine Learning and Optimization},
+  author={Munoz, Andres},
+  journal={URL: https://www. cims. nyu. edu/\~{} munoz/files/ml\_optimization. pdf [accessed 2016-03-02][WebCite Cache ID 6fiLfZvnG]},
+  year={2014}
+}
+@article{kingma2014adam,
+  title={Adam: A method for stochastic optimization},
+  author={Kingma, Diederik and Ba, Jimmy},
+  journal={arXiv preprint arXiv:1412.6980},
+  year={2014}
+}
+@book{bonnans2006numerical,
+  title={Numerical optimization: theoretical and practical aspects},
+  author={Bonnans, Joseph-Fr{\'e}d{\'e}ric and Gilbert, Jean Charles and Lemar{\'e}chal, Claude and Sagastiz{\'a}bal, Claudia A},
+  year={2006},
+  publisher={Springer Science \& Business Media}
 }
